@@ -1,3 +1,8 @@
+2018-09-17 Philipp Klaus Krause <pkk AT spth.de>
+
+	* index.php:
+	  Added News - SDCC 3.8.0 RC1
+
 2018-03-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* left_menu.inc:
